refactored api to allow more endpoints to timetravel. Continuing work on completing api documentation
